# tcpl-revisited

./: .gitattributes  .gitignore  CMakeLists.txt  README.rst  build.bat  build.sh
cmake/: AddStandalone.cmake  ConfigCompile.cmake  FindFlexBison.cmake
data/: bdcl.in.1  bdcl.in.2  bdcl.in.3  bdcl.in.4
include/bdcl/: dcl_parser.h  dllexport.h
include/pdcpl/: bitwise.h  cdcl_dcln_spec.hh  cdcl_parser.hh  cdcl_type_spec.hh  cliopts.h  common.h  core.h  dcl_parser.hh  dllexport.h  errno.hh  features.h  file.h  histogram.h  hresult.hh  math.h  memory.h  memory.hh  misc.h  platform.h  sa.h  string.h  termcolors.h  utility.h  variant.h  version.h  version.h.in  warnings.h
include/pdcpl/cpp/: common.h  errno.h  hresult.h  memory.h
src/: 1.1.c  1.10.c  1.12.c  1.16.c  1.17.c  1.19.c  1.2.c  1.3.c  1.4.c  1.5.c  1.6.c  1.7.c  1.8.c  1.9.c  2.1.c  2.2.c  2.9.c  3.4.c  4.14.c  5.13.c  5.15.c  5.16.c  5.20++.cc  6.1.c  7.1.c  CMakeLists.txt
src/bdcl/: CMakeLists.txt  dcl_parser.cc  dcl_parser_impl.cc  dcl_parser_impl.h  lexer.l  parser.y
src/pdcpl/: CMakeLists.txt  bitwise.c  file.c  histogram.c  memory.c  string.c  variant.c
src/pdcpl_bcdp/: CMakeLists.txt  cdcl_dcln_spec.cc  cdcl_parser.cc  cdcl_parser_impl.cc  cdcl_parser_impl.hh  dcl_parser.cc  dcl_parser_impl.cc  dcl_parser_impl.h  dcl_parser_impl.hh  lexer.l  parser.y
test/: CMakeLists.txt  bitwise_test.cc  cdcl_dcln_spec_test.cc  cdcl_parser_test.cc  cdcl_type_spec_test.cc  dcl_parser_test.cc  file_test.cc  math_test.cc  memory_test.cc  misc_test.cc  string_param_test.cc  string_test.cc  string_test_1.cc  string_test_2.cc  variant_test.cc
